Ajuste para chamada externa e criação da Zona/Localizacao.